# webrtc-client

./: CMakeLists.txt  README.md  ice_servers.txt  main.c
cmake/: Findlibdatachannel.cmake
examples/: chat.c  game.c
src/: main.c  rtc_handler.c  rtc_handler.h
